# health-monitor

./: .dockerignore  .gitignore  Dockerfile.api  Makefile  README.md  compose.yaml  pyproject.toml
.claude/: launch.json
docs/: agent-chat-ui-spec.md  agent-first-closeout-plan.md  agent-first-plan.md  architecture-design.md  chatgpt-history-import.md  chatgpt-log-lessons.md  feature-behavior-spec.md  feature-parity-gaps.md  hardening-evals.md  live-acceptance.md  nexus-log-svc-docs.md  product-scope.md  restoration-plan.md  testing-strategy.md  ux-redesign-plan.md  v1-acceptance-checklist.md
scripts/: build_chatgpt_week_scenario.py  extract_chatgpt_eval_candidates.py  extract_chatgpt_image_assets.py  extract_chatgpt_log_signals.py  inspect_chatgpt_log.py  seed_scratch_db.py  update_chatgpt_image_classification.py
src/health_monitor/: __init__.py  __main__.py  config.py  server.py  smoke.py  worker.py
tests/behavior/: __init__.py  test_agent_chat_harness.py  test_agent_text_meal_flow.py  test_attachments_evidence.py  test_background_jobs.py  test_barcode_association.py  test_chat_routing_fixes.py  test_daily_driver_application_slice.py  test_diary_entry_corrections.py  test_export_import.py  test_food_lookup_candidates.py  test_food_name_resolution.py  test_food_reference_resolution.py  test_food_version_history.py  test_label_image_extraction.py  test_label_scan_proposal_flow.py  test_onboarding_profile_setup.py  (+7 more)
web/: Dockerfile  index.html  nginx.conf  package.json  playwright.agent-chat-ui.config.ts  playwright.config.ts  test.ts  tsconfig.json  vite.config.ts
(+116 files in other folders)
